# CodingAgent-Reproduce

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml  requirements.txt  run.py
TEXT/: ReadFile.txt  compact.txt  test.txt
docs/: checklist.md  spec.md  tasks.md
docs/ch03/: checklist.md  spec.md  tasks.md
docs/ch04/: checklist.md  spec.md  tasks.md
docs/ch05/: checklist.md  spec.md  tasks.md
docs/ch06/: checklist.md  spec.md  tasks.md
docs/ch07/: checklist.md  spec.md  tasks.md
docs/ch08/: checklist.md  spec.md  tasks.md
mewcode/: __init__.py  __main__.py  agent.py  app.py  cache.py  client.py  config.py  conversation.py  prompts.py
mewcode/context/: __init__.py  manager.py
mewcode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
mewcode/permissions/: __init__.py  checker.py  dangerous.py  modes.py  rules.py  sandbox.py
mewcode/tools/: __init__.py  agent_tool.py  ask_user.py  base.py  bash.py  edit_file.py  glob.py  grep.py  read_file.py  registry.py  write_file.py
mewcode/tools/impl/: __init__.py  tool_search.py
scripts/: demo_compaction.py
tests/: test_agent.py  test_agent_loop.py  test_app.py  test_context.py  test_mcp.py  test_permissions.py  test_prompts.py  test_recovery.py  test_replacement_state.py  test_tool_search.py  test_tools.py
