[project]
name = "mewcode"
version = "0.2.0"
description = "A terminal AI coding assistant."
requires-python = ">=3.10"
# Dependencies are managed in requirements.txt (uv pip install -r requirements.txt).

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
